# wellbeing-mcp

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
tests/: test_calorie_estimation.py  test_daily.py  test_db.py  test_vault_context.py
wellbeing_mcp/: bridge.py  daily.py  db.py  serve_http.py  server.py  vault.py  workout.py
